--- a/packages/@weex/plugins/debug/frontend/runtime/runtime.html
+++ b/packages/@weex/plugins/debug/frontend/runtime/runtime.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weex Devtool - JS Debugger</title>
+    <title>NVue Devtool - JS Debugger</title>
     <script src="EventEmitter.js"></script>
     <script src="WebsocketClient.js"></script>
     <script src="index.js"></script>
